--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -18,11 +20,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "eslint": "7.32.0",
     "eslint-config-custom": "workspace:*",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "^29.4.3",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
   }
