--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "recoil": "^0.7.6",
     "ui": "workspace:*"
   },
@@ -23,6 +24,7 @@
     "@babel/core": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
@@ -32,6 +34,7 @@
     "eslint-config-custom": "workspace:*",
     "jest": "29.3.1",
     "jest-environment-jsdom": "^29.4.3",
+    "react-test-renderer": "^18.2.0",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
   }
