--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,8 @@
     "@nestjs/typeorm": "^9.0.1",
     "cache-manager": "^5.1.7",
     "cache-manager-ioredis": "^2.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mysql2": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
