--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "bcrypt": "^5.1.0",
     "cache-manager": "^5.1.7",
     "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
@@ -38,6 +39,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cache-manager-ioredis": "^2.0.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
