--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,10 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.3.5",
     "cache-manager": "^5.1.7",
     "cache-manager-ioredis": "^2.1.0",
     "mysql2": "^3.1.2",
